    - tweak fast-heat: speeds up item heating & cooling, thus making stable-temp act faster.
    - tweak fix-dimensions: fixes subtracting small amounts from stacked liquids etc.
    - tweak advmode-contained: fixes UI bug in custom reactions with container inputs in advmode.
    - tweak fast-trade: Shift-Enter for selecting items quckly in Trade and Move to Depot screens.
  New scripts:
    - fixnaked: removes thoughts about nakedness.
    - setfps: set FPS cap at runtime, in case you want slow motion or speed-up.
    - siren: wakes up units, stops breaks and parties - but causes bad thoughts.
    - fix/population-cap: run after every migrant wave to prevent exceeding the cap.
    - fix/stable-temp: counts items with temperature updates; does instant one-shot stable-temp.
    - fix/loyaltycascade: fix units allegiance, eg after ordering a dwarf merchant kill.
    - deathcause: shows the circumstances of death for a given body.
    - digfort: designate areas to dig from a csv file.
    - drainaquifer: remove aquifers from the map.
    - growcrops: cheat to make farm crops instantly grow.
    - magmasource: continuously spawn magma from any map tile.
    - removebadthoughts: delete all negative thoughts from your dwarves.
    - slayrace: instakill all units of a given race, optionally with magma.
    - superdwarf: per-creature fastdwarf.
  New GUI scripts:
    - gui/mechanisms: browse mechanism links of the current building.
    - gui/room-list: browse other rooms owned by the unit when assigning one.
    - gui/liquids: a GUI front-end for the liquids plugin.
    - gui/rename: renaming stockpiles, workshops and units via an in-game dialog.
    - gui/power-meter: front-end for the Power Meter plugin.
    - gui/siege-engine: front-end for the Siege Engine plugin.
  Autolabor plugin:
    - can set nonidle hauler percentage.
    - broker excluded from all labors when needed at depot.
    - likewise, anybody with a scheduled diplomat meeting.