@@ -48,6 +48,12 @@ keybinding add Shift-O "job-material OBSIDIAN"
 keybinding add Shift-T "job-material ORTHOCLASE"
 keybinding add Shift-G "job-material GLASS_GREEN"
 
+# sort units and items
+keybinding add Alt-Shift-N "sort-units name" "sort-items description"
+keybinding add Alt-Shift-R "sort-units arrival"
+keybinding add Alt-Shift-T "sort-units profession" "sort-items type material"
+keybinding add Alt-Shift-Q "sort-units squad_position" "sort-items quality"
+
 # browse linked mechanisms
 keybinding add Ctrl-M@dwarfmode/QueryBuilding/Some gui/mechanisms
 
@@ -95,3 +101,8 @@ tweak advmode-contained
 # support Shift-Enter in Trade and Move Goods to Depot screens for faster
 # selection; it selects the current item or stack and scrolls down one line
 tweak fast-trade
+
+# stop the right list in military->positions from resetting to top all the time
+tweak military-stable-assign
+# in same list, color units already assigned to squads in brown & green
+tweak military-color-assigned
